<resources>
    <string name="app_name">MYOSA</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
    <string name="event">New Event</string>
    <string name="large_text">
    "Material is the metaphor.\n\n"

    "A material metaphor is the unifying theory of a rationalized space and a system of motion."
    "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
    "technologically advanced and open to imagination and magic.\n"
    "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
    "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
    "flexibility of the material creates new affordances that supercede those in the physical "
    "world, without breaking the rules of physics.\n"
    "The fundamentals of light, surface, and movement are key to conveying how objects move, "
    "interact, and exist in space and in relation to each other. Realistic lighting shows "
    "seams, divides space, and indicates moving parts.\n\n"

    "Bold, graphic, intentional.\n\n"

    "The foundational elements of print based design typography, grids, space, scale, color, "
    "and use of imagery guide visual treatments. These elements do far more than please the "
    "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
    "imagery, large scale typography, and intentional white space create a bold and graphic "
    "interface that immerse the user in the experience.\n"
    "An emphasis on user actions makes core functionality immediately apparent and provides "
    "waypoints for the user.\n\n"

    "Motion provides meaning.\n\n"

    "Motion respects and reinforces the user as the prime mover. Primary user actions are "
    "inflection points that initiate motion, transforming the whole design.\n"
    "All action takes place in a single environment. Objects are presented to the user without "
    "breaking the continuity of experience even as they transform and reorganize.\n"
    "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
    "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

    "3D world.\n\n"

    "The material environment is a 3D space, which means all objects have x, y, and z "
    "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
    "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
    "position along the z-axis and has a standard 1dp thickness.\n"
    "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
    "emulated by manipulating the y-axis.\n\n"

    "Light and shadow.\n\n"

    "Within the material environment, virtual lights illuminate the scene. Key lights create "
    "directional shadows, while ambient light creates soft shadows from all angles.\n"
    "Shadows in the material environment are cast by these two light sources. In Android "
    "development, shadows occur when light sources are blocked by sheets of material at "
    "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
    "y-axis only. The following example shows the card with a height of 6dp.\n\n"

    "Resting elevation.\n\n"

    "All material objects, regardless of size, have a resting elevation, or default elevation "
    "that does not change. If an object changes elevation, it should return to its resting "
    "elevation as soon as possible.\n\n"

    "Component elevations.\n\n"

    "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
    "does not vary from 6dp in one app to 16dp in another app).\n"
    "Components may have different resting elevations across platforms, depending on the depth "
    "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

    "Responsive elevation and dynamic elevation offsets.\n\n"

    "Some component types have responsive elevation, meaning they change elevation in response "
    "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
    "changes are consistently implemented using dynamic elevation offsets.\n"
    "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
    "to the component’s resting state. They ensure that elevation changes are consistent "
    "across actions and component types. For example, all components that lift on press have "
    "the same elevation change relative to their resting elevation.\n"
    "Once the input event is completed or cancelled, the component will return to its resting "
    "elevation.\n\n"

    "Avoiding elevation interference.\n\n"

    "Components with responsive elevations may encounter other components as they move between "
    "their resting elevations and dynamic elevation offsets. Because material cannot pass "
    "through other material, components avoid interfering with one another any number of ways, "
    "whether on a per component basis or using the entire app layout.\n"
    "On a component level, components can move or be removed before they cause interference. "
    "For example, a floating action button (FAB) can disappear or move off screen before a "
    "user picks up a card, or it can move if a snackbar appears.\n"
    "On the layout level, design your app layout to minimize opportunities for interference. "
    "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
    "when a user tries to pick up one of cards."
    </string>
    <string name="Myosa_intro">MYOSA (Make Your Own Sensors Applications) is a plug-and-play, multipurpose, multisensor board for learning purpose. It is like a lego set with which students can play and learn about the sensors. More importantly, it equips the users ready-to-apply connections of sensors and the board so that the user doesn’t have to worry about wires and can directly jump on various innovative applications. Various blocks include different sensors and an OLED screen that displays the output The board also has a Bluetooth module through which the output data gets transferred to the MYOSA mobile application.</string>
    <string name="homeapp">For easy and handy access to the sensors’ readings and data, the MYOSA Android application has been developed. The data observed on the OLED screen is uploaded to the application via Bluetooth module and updated continuously. Changing trends of the sensor readings can be studied using the graphs available on the application. Readings of the sensors, which are connected to the MYOSA board will be automatically displayed on the app.</string>
    <string name="title_paired_devices">Paired device</string>
    <string name="title_other_devices">Other device</string>
    <string name="button_scan">Scan</string>
    <string name="send">Send</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Discoverable</string>
    <string name="not_connected">Not connected</string>
    <string name="bt_not_enabled_leaving">Not enabled</string>
    <string name="select_device">Selected device</string>
    <string name="none_found">None found</string>
    <string name="scanning">Scanning</string>
    <string name="none_paired">None paired</string>
    <string name="TitleName">MYOSA</string>
    <string name="set">Set</string>
    <string name="sensor_name">Sensor Name</string>
    <string name="sensor_councile">Sensor Councile</string>
    <string name="title_activity_infopage">Infopage</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Features</string>
    <string name="tab_text_3">How to Use</string>
    <string name="bButton">Find Device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="export_to_csv">Export to CSV</string>
    <string name="myosa">MYOSA</string>
    <string name="themobileapp">The Mobile Application:</string>
    <string name="homepack">Packaging:</string>
    <string name="homemoti">Motivation:</string>
    <string name="motivatontext">Learning is always fruitful when one experiments. The curriculum of pre-university students does not include sensors. So far it might have been thought too early for them to introduce it. If they are asked to build a sensor based application, these students might run away just from the sheer mess of soldering wires, coding, ordering the right sensors, etc. Also, with the advent of IoT and dream of Smart Cities, sensors have become an integral part of applications and research just like basic resistors and capacitors. With sensors gaining such an immense importance in ample of technological advancements, it is desirable for the pre-university students to get introduced to the world of sensors. Such introduction to sensors, at the pre-university stage would kindle a curiosity among the students to explore more and contribute in the future advancements. With a motivation to make this learning process playful, without any burden or complexity, we have designed and developed the MYOSA board. We also have developed some basic experiments around this board such that the students or programmers can use it without wasting their efforts and time behind basic sensor coding and operations. It gives a hands-on experience to the users and the suggested projects provoke thought process. One can also design one’s own circuits and applications using sensors.</string>

    <string name="text_accounts">All Accounts</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_login">Login</string>
    <string name="text_register">Register</string>
    <string name="error_message_name">Enter Full Name</string>
    <string name="error_message_email">Enter Valid Email</string>
    <string name="error_message_id">Enter Valid Event ID</string>
    <string name="error_message_age">Enter Age</string>
    <string name="error_message_password">Enter Password</string>
    <string name="success_message">Registration Successful</string>
    <string name="text_not_member">No account yet? Create one</string>
    <string name="text_already_member">Already a member? Login</string>
    <string name="error_email_exists">Email Already Exists</string>
    <string name="error_password_match">Password Does Not Matches</string>
    <string name="error_valid_email_password">Wrong Email or Password</string>
    <string name="text_hello">Hello,</string>
    <string name="text_title">VR Friends</string>

</resources>
